Added new Altar Rank 0 blocks Aren't yet used in Altar Rank 0 detection

--- a/src/main/resources/assets/favorofthegods/lang/en_US.lang
+++ b/src/main/resources/assets/favorofthegods/lang/en_US.lang
@@ -1,2 +1,3 @@
-tile.favorofthegods_blockAltar.name=Altar of the Gods
-tile.favorofthegods_blockdesertpig.name=Desert Pig's Block
+tile.favorofthegods_blockaltar.name=Altar of the Gods
+tile.favorofthegods_blockRank0.DesertPig.name=Desert Pig's Block
+tile.favorofthegods_blockRank0.Stefan.name=Stefan's Block
