Added God of Nature

--- a/src/main/resources/assets/favorofthegods/lang/en_US.lang
+++ b/src/main/resources/assets/favorofthegods/lang/en_US.lang
@@ -3,3 +3,4 @@ tile.favorofthegods_blockAltar.name=Altar of the Gods
 tile.favorofthegods_blockStefan0.name=Stefan's Block
 tile.favorofthegods_blockDesertPig0.name=Desert Pig's Block
 tile.favorofthegods_blockBlood0.name=Blood's Block
+tile.favorofthegods_blockNature0.name=Nature's Block
